fixed alignment of ControlPanel in chrome

--- a/src/styles/visualization.less
+++ b/src/styles/visualization.less
@@ -3,7 +3,7 @@
     z-index: 50;
     left: 0;
     top: 0;
-    width: 100vw;
+    right: 0;
     height: 100vh;
     background-color: white;
 }
